--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,10 @@
         }
       })(window.location);
     </script>
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <!-- End Single Page Apps for GitHub Pages -->
   </head>
   <body>
